--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "antd": "^3.17.0",
+    "aws-sdk": "^2.464.0",
     "axios": "^0.18.0",
     "humps": "^2.0.1",
     "normalizr": "^3.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-intl": "^2.9.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
