--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "react-sound": "^1.2.0",
     "redux": "^4.0.1",
     "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
